# ai_commerce

./: .gitignore  LICENSE  README.md  app_interface.py  core_processor.py  core_processor_llm_only.py  main_app.py  pyproject.toml  run_app.sh  run_llm_gpt.py  test.py
core_processors/: core_processor_llm_only.py  core_processor_scrap_llm.py
pages/: App_interface_with_LLM.py  App_interface_with_Scraping_and_LLM.py  app_interface_llm.py  app_interface_scrap_llm.py
prompt_handlers/: base_handler.py  description_keywords_handler.py  exhibitor_fit_handler.py  name_changer_handler.py
prompts/: description_keywords.txt  email_first_line_creator.txt  exhibitor_fit.txt  name_changer.txt
searching_tests/: search_and_create.py
