[project]
name = "ai-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gspread>=6.2.1",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.0",
    "transformers>=4.51.3",
    "webdriver-manager>=4.0.2",
]
